# brain-mcp-icon-visual

./: .gitignore  Cargo.toml  Dockerfile.build  README.md  glama.json  server.json
.cargo/: config.toml
.github/workflows/: release.yml
docs/.well-known/mcp/: server-card.json
npm/: package.json
smithery-build/: manifest.json
src/: api_client.rs  error.rs  main.rs  resolve.rs  server.rs
src/tools/: get_svg.rs  mod.rs  render_grid.rs  search_icons.rs
